updated to apsg 0.3.6 and geosurf; adding angles calculation

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/plugins/geocouche" >
-        <file>icon.png</file>	
+        <file>icons/stereoplot.png</file>
+        <file>icons/angle.svg</file>
     </qresource>
 </RCC>
