--- a/resources.qrc
+++ b/resources.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/plugins/geocouche" >
         <file>icons/stereoplot.png</file>
         <file>icons/angle.svg</file>
+		<file>icons/help.ico</file>
     </qresource>
 </RCC>
